# Roadguard-MVP

./: README.md  main.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/.streamlit/: config.toml
app/components/: __init__.py  alerts.py  detection.py  mapping.py  privacy.py  utils.py
app/pages/: __init__.py  alert_sim.py  demo.py  map_view.py  metrics.py  privacy_test.py
data/: hazards.db
scripts/: init_database.py
src/postprocessing/: deduplication.py
tests/: test_alerts.py  test_detection.py
